# be-aqylshyn-diploma

./: Dockerfile  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: deploy.yaml
apps/ai_chat/: models.py  serializers.py  services.py  urls.py  views.py
apps/ai_chat/migrations/: 0001_initial.py  0002_alter_chatmessage_options.py  0003_chatmessage_attached_file.py  0004_remove_chatmessage_attached_file_chatfile.py
apps/auths/: serializers.py  services.py  urls.py  views.py
apps/common/: enums.py  mixins.py  models.py  permissions.py  serializers.py  services.py  utils.py
apps/courses/: admin.py  models.py  serializers.py  urls.py  views.py
apps/courses/admin_page/: forms.py  views.py
apps/courses/entity_serializers/: general_english.py
apps/courses/migrations/: 0001_initial.py  0002_alter_course_type.py
apps/general_english/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py
apps/general_english/entity_models/: module.py  module_score.py  speaking.py  trial_option.py  trial_question.py  user_progress.py  writing.py
apps/general_english/entity_serializers/: module.py  module_submit.py  speaking.py  trial_question.py  trial_test.py  user_progress.py  writing.py
apps/general_english/migrations/: 0001_initial.py  0002_alter_trialquestion_question.py  0002_initial.py  0003_readingquestion_question.py  0003_remove_readingquestion_reading_and_more.py  0004_alter_modulescore_score.py  0005_alter_listeningquestion_audio_question.py  0006_optionattempt_writingattempt.py  0007_remove_optionattempt_correct_option_id_and_more.py  0008_module_order.py
apps/general_english/models/: course.py  module.py  trial_option.py  trial_question.py  user_course.py
apps/general_english/serializers/: course.py  trial_option.py  trial_question.py
apps/general_english/services/: module_submit.py  (+1 more)
apps/ielts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/llms/: elevenlab_cli.py  openai_cli.py  prompts.py  services.py
apps/universities/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
core/: celery.py  settings.py  urls.py
templates/admin/: trial_test_form.html
(+98 files in other folders)
